style.css
*{
    background-color: blue;
}

#bio{
    color: orange;
    text-align: center;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    font-size: 50px;
}

#name{
    color: red;
    text-align: center;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    font-size: 40px;
}

#selfie{
    border: 10px solid yellow;
    border-style: groove;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

#contact{
    text-align: left;
}

.textbox {
    font-size: 26px;
    width: 200;
    height: 120px;
    text-align: center;
    background-color: red;
}

